# pylibrary

./: .gitignore  LICENSE.txt  SECURITY.md  make_local.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
docs/source/: conf.py  index.rst  modules.rst  pylibrary.fitting.rst  pylibrary.plotting.rst  pylibrary.rst  pylibrary.stats.rst  pylibrary.xlsx.rst  pylibrary.xlsx.tests.rst
docs/source/api/: pylibrary.Fitting.Fitting.rst  (+272 more)
pylibrary/: ClementsBekkers.py  Fitting.py  Igor.py  IgorAppScript.py  Params.py  PlotHelpers.py  RStats.py  TiffInfo.py  Utility.py  Utility.py.orig  __init__.py  acq4read.py  bootstrap.py  bootstrap2.py  crossed_axes_example.py  debug.py  fileselector.py  igor.py  matplotlibexporter.py  params.py  permutation.py  permutation_test.py  picker.py  pqthelptest.py  pyqtgraphPlotHelpers.py  simplex.py  simplex2.py  styler.py  talbotetalTicks.py  tau_lmfit.py  tifffile.py  titlecase.py
pylibrary/C_Routines/: mrqminbd.c  simplex.c
pylibrary/examples/: crossed_axes_example.py
pylibrary/fitting/: __init__.py  fitting.py  simplex.py  simplex2.py  test.py
pylibrary/plotting/: __init__.py  matplotlibexporter.py  plothelpers.py  pyqtgraph_plothelpers.py  styler.py
pylibrary/stats/: __init__.py  bootstrap.py  bootstrap2.py  permutation.py
pylibrary/tools/: __init__.py  cprint.py  digital_filters.py  fileselector.py  listing.py  params.py  ptime.py  tifffile.py  titlecase.py  utility.py
tests/: test_digital_filters.py  test_fitting.py  test_params.py  test_plothelpers.py  test_titlecase.py  test_utility.py
(+6 files in other folders)
