
[project]
name = "pylibrary"
version = "0.5.1"
description = "General routines to assist in plotting and data analysis"
readme = "README.md"
authors = [
    {name = "Paul B. Manis", email = "pmanis@med.unc.edu"},
]
classifiers = [
    "Development Status ::  Beta",
    "Environment :: Console",
    "Intended Audience :: Manis Lab",
    "License :: MIT",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13+",
    "Topic :: Data Processing :: Neuroscience",
    "Topic :: Software Development :: Tools :: Python Modules",
]
requires-python = ">=3.9.*"
dependencies = [
    "cycler>=0.10.0",
    "kiwisolver>=1.1",
    "lmfit>=1.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.4",
    "pyparsing>=2.4",
    "pyqtgraph>=0.13",
    "python-dateutil>=2.8",
    "scipy>=1.2",
]
license = {text = "MIT"}

[project.urls]
Homepage = "http://github.com/pbmanis/pylibrary"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    ]
